fix: update modal backdrop background color for improved visibility

--- a/assets/appfb78fb78.css
+++ b/assets/appfb78fb78.css
@@ -5228,7 +5228,7 @@ a.close.disabled {
   border-radius: 0.3rem;
   border: 0px;
   outline: 0;
-  background-color: #000000f0;
+  background-color: #000000d1;
 }
 .modal-backdrop {
   position: fixed;
